--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <script src="randomName.js"></script>
     <script src="vertex.js"></script>
     <script src="edge.js"></script>
     <script src="graph.js"></script>
